# open-adblock

./: .dockerignore  .gitignore  README.md
.github/workflows/: ci.yml  deploy-udp.yml
chrome/: .gitignore  LICENSE  README.md
chrome/docs/: mv3-design-plan.md
chrome/mv3/: README.md  THIRD_PARTY_NOTICES.md  manifest.json  package.json
chrome/mv3/scripts/: link-filters.mjs  validate-extension.mjs
chrome/mv3/src/background/: filter-engine.js  service-worker.js  stats.js
chrome/mv3/src/content/: cosmetic.js  picker.js
chrome/mv3/src/options/: options.css  options.html  options.js
chrome/mv3/src/popup/: popup.css  popup.html  popup.js
chrome/mv3/src/rules/: static-rules.json
chrome/mv3/tests/: cosmetic-content.test.mjs  filter-engine.test.mjs  ruleset-service-worker.test.mjs  stats.test.mjs
dns/: .gitignore  Cargo.toml  LICENSE  README.md  deno.json
dns/doh/: deno.json  wrangler.toml
dns/doh/src/: blocklist.ts  blocklist_test.ts  dns-parse.ts  dns-parse_test.ts  doh.ts  doh_test.ts  engine.ts  engine_test.ts  forward.ts  forward_test.ts  index.ts  index_test.ts  profile.ts  profile_test.ts  worker.ts
dns/engine/: Cargo.toml
dns/engine/src/: compile.rs  format.rs  lib.rs  matcher.rs
dns/engine/tests/: compile_cli.rs  compile_parsers.rs  exact_match.rs  format_roundtrip.rs  precedence.rs  regex_match.rs  suffix_match.rs
dns/engine/tests/fixtures/: adblock.sample  dnsmasq.sample  domains.sample  hosts.sample
dns/engine/wasm/: Cargo.toml
dns/engine/wasm/src/: lib.rs
dns/scripts/: build-all.sh  build-ci.sh  fetch-upstream.ts  fetch-upstream_test.ts  gen-qr.ts  generate-notice.ts
dns/udp/: Cargo.toml  Dockerfile  fly.light.toml  fly.pro.toml
dns/udp/fly/: config.light.toml  config.pro.toml
dns/udp/src/: blocklist.rs  config.rs  lib.rs  main.rs  resolver.rs  server.rs
dns/udp/tests/: config.rs  e2e.rs
filters/: .gitignore  README.md  manifest.json
filters/browser/allowlist/: cosmetic.txt  element.txt  network.txt
filters/browser/sources/: remote-manifest.schema.json  ubo.json
filters/dns/: NOTICE.template  light.urls  pro.urls  ruleset.json
filters/dns/custom/: allow.txt  block.txt  regex.txt  wildcards.txt
report/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
report/src/: index.ts  report.ts
report/test/: report.test.ts
