[package]
name = "engine-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for the DNS filter engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
